modified routes. allows callback url. twitter sign now directs to twitter api. need uid info

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Tweets#index</h1>
-<p>Find me in app/views/tweets/index.html.erb</p>
+<h3>Jerry C. Lin Twitter Client</h3>
+<%=link_to "Sign In with your Twitter Account", "/auth/twitter" %>
