--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,2 +1,10 @@
 <h3>Jerry C. Lin Twitter Client</h3>
-<%=link_to "Sign In with your Twitter Account", "/auth/twitter" %>
+
+<!-- following sign in/sign out retreives information from session -->
+
+<% if current_user %>
+    Hello <%= current_user.name %>
+    <%= link_to "Sign out", signout_path %>
+<% else %>
+    <%=link_to "Sign In with your Twitter Account", "/auth/twitter" %>
+<% end %>
